Added MovieFlix Application Changes

--- a/Static-Code/Homepage/index.html
+++ b/Static-Code/Homepage/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Nightclub Template - Free Website Template</title>
+<title>MovieFlix Template - Free Website Template</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="templatemo_style.css" rel="stylesheet" type="text/css" />
@@ -12,15 +12,15 @@
 <div id="templatemo_container">
 
 	<div id="templatemo_header">
-    	<div id="templatemo_site_title">NIGHT<span>CLUB</span></div>
-        <div id="templatemo_site_slogan">your tagline goes here</div>
+    	<div id="templatemo_site_title">Movie<span>FLIX</span></div>
+        <div id="templatemo_site_slogan">Real-Time Aplication for DevOps</div>
     </div>
     
     <div id="templatemo_menu">
      	<ul>
 			<li><a href="index.html" class="current">Home</a></li>
 			<li><a href="subpage.html">About</a></li>
-            <li><a href="subpage.html">Club</a></li>
+            <li><a href="subpage.html">Movies</a></li>
             <li><a href="subpage.html">Music</a></li>            
             <li><a href="subpage.html">Contact</a></li>            
         </ul>  
@@ -59,7 +59,7 @@
                 <input class="button" type="submit" name="Submit" value="Login" />
             </form>
 			<div class="space"></div>
-        	<h2>Club News</h2>
+        	<h2>Movies News</h2>
             <h3>Lorem ipsum dolor</h3>
             <p>In sed risus ac felis varius bibendum. Vestibulum dapibus tortor vel orci. Maecenas vulputate, arcu id fermentum eleifend, tortor enim tincidunt mauris, fringilla tincidunt purus urna vel risus.</p>
           <div class="more_button"><a href="#">More</a></div>
@@ -73,15 +73,15 @@
         
     </div>
     <div id="templatemo_footer">
-        <a href="#">Home</a> | <a href="#">About</a> | <a href="#">Club</a> | <a href="#">Music</a> | <a href="#">Contact</a><br />
-        Copyright © 2008 <a href="#"> <strong>Your Company Name</strong></a> | Design By TemplateMo
+        <a href="#">Home</a> | <a href="#">About</a> | <a href="#">Movies</a> | <a href="#">Music</a> | <a href="#">Contact</a><br />
+        Copyright © 2008 <a href="#"> <strong>filmy.com</strong></a> | Design By Venkatesh Peta
 	</div>
 
 </div>
-<!-- templatemo 037 nightclub -->
+<!-- templatemo 037 MovieFLIX-->
 <!-- 
-Nightclub Template 
-http://www.templatemo.com/preview/templatemo_037_nightclub 
+MovieFLIX Template 
+http://www.templatemo.com/preview/templatemo_037_movieFLIX
 -->
 </body>
 </html>
