Added MovieFlix Application Changes

--- a/Static-Code/Songs/index.html
+++ b/Static-Code/Songs/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Music Beats</title>
+<title>MovieFlix Beats</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="css/reset.css" type="text/css" media="all">
 <link rel="stylesheet" href="css/layout.css" type="text/css" media="all">
@@ -23,7 +23,7 @@
 <div class="wrap">
   <header>
     <div class="container">
-      <h1><a href="#">Music Beats</a></h1>
+      <h1><a href="#">MovieFlix Beats</a></h1>
       <nav>
         <ul>
           <li class="m1"><a href="index.html" class="active"><span>home</span></a></li>
@@ -58,7 +58,7 @@
           <h2>Recent Articles</h2>
           <ul class="list">
             <li><strong>About This Template</strong>Eusus consequam vitae habitur amet nullam vitae condis phasellus sed justo. Orcivel mollis intesque eu sempor ridictum a non laorem. <a href="#"><img src="images/arrow.gif"></a></li>
-            <li><strong>Music Beats</strong>Sed ut perspiciatis unde omnis iste beatae vitae dicta sunt explicabo labore voluptatemenim. <a href="#"><img src="images/arrow.gif"></a></li>
+            <li><strong>MovieFlix Beats</strong>Sed ut perspiciatis unde omnis iste beatae vitae dicta sunt explicabo labore voluptatemenim. <a href="#"><img src="images/arrow.gif"></a></li>
             <li><strong>Night Club Life</strong>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet adipisci velit sed quia non numquamt. <a href="#"><img src="images/arrow.gif"></a></li>
             <li><strong>Best DJ Sets</strong>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet adipisci velit sed quia nnumquamt. <a href="#"><img src="images/arrow.gif"></a></li>
           </ul>
