Added MovieFlix Application Changes

--- a/Static-Code/Songs/index.html
+++ b/Static-Code/Songs/index.html
@@ -72,7 +72,7 @@
   <div class="container">
     <div class="cont-bot"></div>
     <div class="footerlink">
-      <p class="lf">Copyright &copy; 2010 <a href="#">SiteName</a> - All Rights Reserved</p>
+      <p class="lf">Copyright &copy; 2010 <a href="#">filmy.com</a> - All Rights Reserved</p>
       <p class="rf">Design by <a href="http://www.templatemonster.com/">TemplateMonster</a></p>
       <div style="clear:both;"></div>
     </div>
